# cdb-rs

./: Cargo.toml  README.md
src/: filebuffer.rs  lib.rs  nostd.rs  reader.rs  uint32.rs  vecbuf.rs  writer.rs  writer_nostd.rs
tests/: make.rs  read.rs
