[package]
name = "cdb"
version = "0.6.0"
authors = ["Bruce Guenter <bruce@untroubled.org>"]
description = "Pure Rust library to read and write CDB files"
homepage = "https://github.com/bruceg/cdb-rs"
repository = "https://github.com/bruceg/cdb-rs"
readme = "README.md"
license = "Unlicense"
edition = "2024"

[dependencies]
filebuffer = { version = "1", optional = true }
libc = { version = "0.2.178", default-features = false }

[features]
std = ["dep:filebuffer"]
default = ["std"]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "cdb"
harness = false
