[package]
name = "tumu_cdb"
version = "0.1.0"
authors = ["Alex King <alex@king.net.nz>"]
description = "Pure Rust library to read and write CDB files"
repository = "https://gitlab.com/alexkingnz/tumu-cdb/"
readme = "README.md"
license = "LGPLv3.0-or-later"
edition = "2024"

[dependencies]
libc = { version = "0.2.178", default-features = false }
no_std_io = { version = "0.6.0", default-features = false }

[features]
std = []
default = ["std"]

[[bench]]
name = "cdb"
harness = false
